--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ mypy = "^1.13.0"
 notebook = "^7.2.2"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
+pylint = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core"]
