remove the overly restrictive pre-commitment yield doc

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
             "-rn",
             "-sn",
             "--load-plugins=pylint.extensions.docparams",
-            "--accept-no-yields-doc=no",
+            #"--accept-no-yields-doc=no",
             "--accept-no-return-doc=no",
             "--accept-no-raise-doc=no",
             "--accept-no-param-doc=no",
