--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ notebook = "^7.2.2"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
 pylint = "^3.3.1"
+pandas = "^2.2.3"
 
 [build-system]
 requires = ["poetry-core"]
