--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,12 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.10"
+  jobs:
+    post_create_environment:
+      - pip install poetry
+      - poetry config virtualenvs.create false
+      - . "$READTHEDOCS_VIRTUALENV_PATH/bin/activate" && poetry install --with docs
+      - pip freeze
 
 
 # Build documentation in the "docs/" directory with Sphinx
